Implementación Final 1.0 Administrar Clientes
Se corrigió ciertos errores de lectura de archivo, implementación de lectura de datos en EditText, se finalizó la codificación de ciertas clases como ClienteAdapter, AgregarCliente.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ProyectoPOOG5</string>
+    <string-array name="tipos_cliente">
+        <item>Seleccione</item>
+        <item>Personal</item>
+        <item>Empresarial</item>
+    </string-array>
 </resources>
